nginx-cluster1/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc-cluster1
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
