nginx-cluster1/nginx-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
  name: nginx-gw-1
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 8080
      protocol: HTTP
