nginx-cluster1/nginx-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
  name: ngx-svc-cluster1
spec:
  gateways:
  - istio-system/nginx-gw
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ngx-svc-cluster1.default.svc.cluster.local
        port:
          number: 80
